k8s/apps/ircclient/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thelounge
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - irc.tdude.co
    - znc.irc.tdude.co
    secretName: irc-tdude-co-tls
  rules:
  - host: irc.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thelounge
            port:
              name: http
  - host: znc.irc.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: znc
            port:
              name: hybrid
